fixed center text align on alert

--- a/src/main/resources/public/styles.css
+++ b/src/main/resources/public/styles.css
@@ -185,7 +185,7 @@ header{
 
 .alert-box{
     color: whitesmoke;
-    text-align-last: center;
+    text-align: center;
 }
 
 .footer{
